[gd_scene load_steps=36 format=2]

[ext_resource path="res://assets/enemies/Rino/Hit (52x34).png" type="Texture" id=1]
[ext_resource path="res://assets/enemies/Rino/Hit Wall (52x34).png" type="Texture" id=2]
[ext_resource path="res://assets/enemies/Rino/Run (52x34).png" type="Texture" id=3]
[ext_resource path="res://assets/enemies/Rino/Idle (52x34).png" type="Texture" id=4]
[ext_resource path="res://scripts/enemies/rino.gd" type="Script" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 52, 34 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 52, 0, 52, 34 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 104, 0, 52, 34 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 156, 0, 52, 34 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 208, 0, 52, 34 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 260, 0, 52, 34 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 312, 0, 52, 34 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 364, 0, 52, 34 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 416, 0, 52, 34 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 468, 0, 52, 34 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 520, 0, 52, 34 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 52, 34 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 52, 0, 52, 34 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 104, 0, 52, 34 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 156, 0, 52, 34 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 208, 0, 52, 34 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 52, 34 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 52, 0, 52, 34 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 104, 0, 52, 34 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 156, 0, 52, 34 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 52, 34 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 52, 0, 52, 34 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 104, 0, 52, 34 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 156, 0, 52, 34 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 208, 0, 52, 34 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 260, 0, 52, 34 )

[sub_resource type="SpriteFrames" id=27]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": false,
"name": "hit",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": false,
"name": "hit_wall",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "run",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 24, 14.5 )

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 309, 32.5 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 25.5, 15 )

[node name="rino" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="idle_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 27 )
animation = "idle"
frame = 6
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.5 )
shape = SubResource( 28 )

[node name="player_checker" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_checker"]
position = Vector2( 0, -12 )
shape = SubResource( 31 )

[node name="side_checker" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="side_checker"]
position = Vector2( -0.499999, 2 )
shape = SubResource( 29 )

[node name="edge_checker" type="RayCast2D" parent="."]
position = Vector2( -5, 17 )
cast_to = Vector2( 0, 1 )

[connection signal="timeout" from="idle_timer" to="." method="_on_idle_timer_timeout"]
[connection signal="body_entered" from="player_checker" to="." method="_on_player_checker_body_entered"]
[connection signal="body_exited" from="player_checker" to="." method="_on_player_checker_body_exited"]
[connection signal="body_entered" from="side_checker" to="." method="_on_side_checker_body_entered"]
